postgresql simple only

--- a/persistent-postgresql-query-in-progress-issue.cabal
+++ b/persistent-postgresql-query-in-progress-issue.cabal
@@ -24,3 +24,4 @@ executable persistent-postgresql-query-in-progress-issue
                      , bytestring
                      , resource-pool
                      , time
+                     , postgresql-simple
