make postgresql simple example closer to persistent

--- a/persistent-postgresql-query-in-progress-issue.cabal
+++ b/persistent-postgresql-query-in-progress-issue.cabal
@@ -25,3 +25,4 @@ executable persistent-postgresql-query-in-progress-issue
                      , resource-pool
                      , time
                      , postgresql-simple
+                     , resourcet
