try reproducing error by creating pool like persistent

--- a/persistent-postgresql-query-in-progress-issue.cabal
+++ b/persistent-postgresql-query-in-progress-issue.cabal
@@ -26,3 +26,5 @@ executable persistent-postgresql-query-in-progress-issue
                      , time
                      , postgresql-simple
                      , resourcet
+                     , unliftio
+                     , text
